[package]
name = "example-http-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.5.13"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
sea-orm = "0.9.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
